--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
         run: npm ci
 
       - name: Build
+      - name: Add SPA fallback (404.html)
+        working-directory: .
+        run: cp dist/index.html dist/404.html
         working-directory: .
         run: npm run build
 
