--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,9 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run build
+        run: |
+          echo "VITE_SUPABASE_DISABLED=true" >> $GITHUB_ENV
+          npm run build
 
       - name: Add SPA fallback (404.html)
         run: cp dist/index.html dist/404.html
