--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,10 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: |
-          echo "VITE_SUPABASE_DISABLED=true" >> $GITHUB_ENV
-          npm run build
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+        run: npm run build
 
       - name: Add SPA fallback (404.html)
         run: cp dist/index.html dist/404.html
