--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "cmdk": "1.0.0",
     "date-fns": "^3.0.0",
     "embla-carousel-react": "^8.5.2",
+    "firebase": "^12.1.0",
     "framer-motion": "^12.23.3",
     "input-otp": "^1.4.2",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.364.0",
     "next-themes": "^0.4.4",
     "pg": "^8.16.3",
